5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1616_2921.log
== TEST (2019-04-01 15:15:55) 
-- CODE:
J1 = float(input("Qual o valor?"))
J2 = float(inout("Qual o valor?"))

desc = J2*25/100

TP2 = J2 - desc

print(round(TP2, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    J2 = float(inout("Qual o valor?"))
NameError: name 'inout' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:16:17) 
-- CODE:
J1 = float(input("Qual o valor?"))
J2 = float(input("Qual o valor?"))

desc = J2*25/100

TP2 = J2 - desc

print(round(TP2, 2))50
-- ERROR:
File "XXXX", line 8
    print(round(TP2, 2))50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:16:28) 
-- CODE:
J1 = float(input("Qual o valor?"))
J2 = float(input("Qual o valor?"))

desc = J2*25/100

TP2 = J2 - desc

print(round(TP2, 2))
-- OUTPUT:
66.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:17:20) 
-- CODE:
J1 = float(input("Qual o valor?"))
J2 = float(input("Qual o valor?"))

desc = J2*25/100

TP2 = J2 - desc
T = J1 + TP2

print(round(TP2, 2))
-- OUTPUT:
66.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:17:56) 
-- CODE:
J1 = float(input("Qual o valor?"))
J2 = float(input("Qual o valor?"))

desc = J2*25/100

TP2 = J2 - desc
T = J1 + TP2

print(round(TP2, 2))
print(round(T, 2))
-- OUTPUT:
66.94
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:18:23) 
-- CODE:
J1 = float(input("Qual o valor?"))
J2 = float(input("Qual o valor?"))

desc = J2*25/100

TP2 = J2 - desc
T = J1 + TP2

print(round(TP2, 2))
print(round(T, 2))
-- OUTPUT:
66.94
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:18:34) 
-- CODE:
J1 = float(input("Qual o valor?"))
J2 = float(input("Qual o valor?"))

desc = J2*25/100

TP2 = J2 - desc
T = J1 + TP2

print(round(TP2, 2))
print(round(T, 2))
-- EXECUTION TIME:
0.188544
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
166.52
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
